# fractalus

./: .gitignore  Cargo.toml  README.md  build.sh
c/: README.md  custom_stack.h  newton  newton.c  pgraph.c  pgraph.dev  pgraph.h  pgraph_test.c
fractalus_gui/: mix.exs
fractalus_gui/config/: config.exs
fractalus_gui/lib/: fractalus_gui.ex
fractalus_gui/lib/scenes/: home.ex
pascal/: copy.pas  newton.pas
pkg/: README.md  package.json  rustfractals.d.ts  rustfractals.js  rustfractals_bg.wasm
python/: newton.py
src/: complex.rs  lib.rs  logger.rs  main.rs  newton_fractal.rs  newtonfractal.rs  threads.rs  wasm_impl.rs  wasmimpl.rs
www/: .gitignore  index.html  index.js  package.json  webpack.config.js
www/archive/: index.1.html  webpack.config.js
www/public/: index.html
www/src/: App.js  index.js
